--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   path: ^1.9.0
   sqflite_common_ffi: ^2.3.4+4
   path_provider: ^2.1.5
+  introduction_screen: ^3.1.14
+  flutter_animated_timer_icon: ^0.0.3
 
 dev_dependencies:
   flutter_test:
