--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,12 @@ dependencies:
   introduction_screen: ^3.1.14
   flutter_animated_timer_icon: ^0.0.3
   flutter_bloc: ^9.0.0
-  modal_progress_hud_nsn: ^0.5.1
   flutter_flip_card: ^0.0.6
   meta: ^1.15.0
   bloc: ^9.0.0
   flutter_launcher_icons: ^0.14.3
+  cloud_firestore: ^5.6.4
+  firebase_core: ^3.12.0
 
 dev_dependencies:
   flutter_test:
